# twomodalbert

./: .gitignore  LICENSE  README.md  TwoModalBert.py  TwoModalDataset.py  config.ini  example.py  main.py  main_train.py  pyproject.toml
example/: Example_TheOffice.ipynb  config.ini
src/: DataPreparation.py  Inference.py  Trainer.py
src/twomodalbert/: DataPreparation.py  Inference.py  Model.py  Trainer.py
